<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.zack.rewards.sample.demoapp.nav.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/go_to_javascriptFragment"
            app:destination="@id/javascriptFragment" />
        <action
            android:id="@+id/go_to_referrerFragment"
            app:destination="@id/referrerFragment" />
        <action
            android:id="@+id/go_to_shortcutFragment"
            app:destination="@id/shortcutFragment" />
        <action
            android:id="@+id/go_to_missionSdkActivity"
            app:destination="@id/missionSdkActivity" />
    </fragment>
    <fragment
        android:id="@+id/javascriptFragment"
        android:name="com.zack.rewards.sample.demoapp.javascript.JavascriptFragment"
        android:label="@string/label_javascript"
        tools:layout="@layout/fragment_javascript" />
    <fragment
        android:id="@+id/referrerFragment"
        android:name="com.zack.rewards.sample.demoapp.referrer.ReferrerFragment"
        android:label="@string/label_referrer"
        tools:layout="@layout/fragment_referrer" />
    <fragment
        android:id="@+id/shortcutFragment"
        android:name="com.zack.rewards.sample.demoapp.shortcut.ShortcutFragment"
        android:label="@string/label_app_shortcut"
        tools:layout="@layout/fragment_app_shortcut">
        <argument
            android:name="pageUrl"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <activity
        android:id="@+id/missionSdkActivity"
        android:name="com.zack.rewards.sample.demoapp.mission.MissionSdkActivity"
        android:label="MissionSdkActivity"
        tools:layout="@layout/activity_mission_sdk" />
</navigation>